Fixed the overlapping issue on all screens.

--- a/public/Kanbas/Courses/Assignments/index.css
+++ b/public/Kanbas/Courses/Assignments/index.css
@@ -1,3 +1,16 @@
+/* For the section of the screen that is not the Kanbas Navigation bar. */
+.wd-assignment-col-num2 {
+    padding-left: 40px;
+}
+
+/* Change the padding of a wd-col-num2 element when the browser window is 767px wide or less. */
+@media only screen and (max-width: 767px) {
+    .wd-assignment-col-num2 {
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
+
 .wd-assignments-section {
     margin-top: 20px;
     margin-bottom: 20px;
