--- a/public/Kanbas/Courses/Grades/index.css
+++ b/public/Kanbas/Courses/Grades/index.css
@@ -1,3 +1,16 @@
+/* For the section of the screen that is not the Kanbas Navigation bar. */
+.wd-grades-col-num2 {
+    padding-left: 40px;
+}
+
+/* Change the padding of a wd-col-num2 element when the browser window is 767px wide or less. */
+@media only screen and (max-width: 767px) {
+    .wd-grades-col-num2 {
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
+
 .wd-grade-button {
     background-color: buttonface;
     border-color: buttonborder;
