--- a/public/Kanbas/Courses/Home/index.css
+++ b/public/Kanbas/Courses/Home/index.css
@@ -3,14 +3,7 @@
     padding-left: 40px;
 }
 
-/* Change the padding of a wd-home-col-num2 element when the browser window is a minimum width of 1199px wide. */
-@media only screen and (min-width: 1199px) {
-    .wd-home-col-num2 {
-        padding-left: 25px;
-    }
-}
-
-/* Change the padding of a wd-home-col-num2 element when the browser window is 767px wide or less. */
+/* Change the padding of a wd-col-num2 element when the browser window is 767px wide or less. */
 @media only screen and (max-width: 767px) {
     .wd-home-col-num2 {
         padding-left: 0;
