--- a/public/Kanbas/style.css
+++ b/public/Kanbas/style.css
@@ -17,3 +17,16 @@ body * {
 body.wd-nomargin {
     margin: 0;
 }
+
+/* For the section of the screen that is not the Kanbas Navigation bar. */
+/* .wd-col-num2 {
+    padding-left: 40px;
+} */
+
+/* Change the padding of a wd-col-num2 element when the browser window is 767px wide or less. */
+/* @media only screen and (max-width: 767px) {
+    .wd-col-num2 {
+        padding-left: 0;
+        padding-right: 0;
+    }
+} */
